# trial-eligibility-compiler

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  prompt-1-skeleton-gates-cdm.md  prompt-2-compiler-mocked.md  prompt-3-real-compile-demo.md  pyproject.toml
.claude/commands/: check-pattern.md  compile.md  new-spec.md  verify.md
.cursor/commands/: compile.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
compiled/NCT03667300/: cohort.json  conventions.json  manifest.json
docs/: AMBIGUOUS.md  answer-key-demotion.md  conventions.md  determinism.md  gates.md  new-trial.md  runtime-ohdsi.md  vocab-and-licensing.md
docs/design/: PLAN.md  corpus-plan.md  fixture-plan.md
fixtures/cdm/: concept.csv  concept_ancestor.csv  concept_relationship.csv  vocabulary.csv
fixtures/patients/: b_arbace_28d.yaml  b_arbace_29d.yaml  b_ast_120.yaml  b_ast_121.yaml  b_bmi_20.yaml  b_bmi_40.yaml  b_egfr_29_9.yaml  b_egfr_30.yaml  b_hba1c_100.yaml  b_hba1c_101.yaml  b_hba1c_69.yaml  b_hba1c_70.yaml  b_uacr_29.yaml  b_uacr_30.yaml  b_uacr_3000.yaml  b_uacr_3001.yaml  nm_e1_otherdm.yaml  nm_e3_ast.yaml  nm_e4_dpp4.yaml  nm_i1_age.yaml  nm_i2_t2dm.yaml  nm_i3_hba1c.yaml  nm_i4_uacr.yaml  nm_i5_egfr.yaml  nm_i6_arbace.yaml  nm_i7_bmi.yaml  p_bariatric_e2.yaml  (+2 more)
scripts/: install_ohdsi.R
source/: NCT03667300.md
tec/: __init__.py  canonical.py  paths.py
tests/: test_answer_key_demotion.py  test_backends.py  test_cdm_build.py  test_compiler.py  test_fixtures.py  test_gate3_fixtures.py  test_gates_pure.py  test_trcheck.py
(+29 files in other folders)
