[project]
name = "trial-eligibility-compiler"
version = "0.1.0"
description = "Compiled AI: verbatim ClinicalTrials.gov eligibility prose -> deterministic OHDSI Circe cohort, committed only after machine-checkable gates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "compiled-ai-labs" }]
dependencies = [
    "duckdb>=1.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]
# LLM backend for `trcompile --backend api`. Not needed for trcheck, the gates,
# CI (mock), or the claude-code / cursor CLI backends.
llm = [
    "anthropic>=0.40.0",
]

[project.scripts]
trcompile = "tec.compile.cli:main"
trcheck = "tec.runtime.trcheck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
